C/include/codata_constants_2014.h

ADD_IMPORT const struct codata_constant_type DEUTERON_ELECTRON_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_ELECTRON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_G_FACTOR_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MAG_MOM_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MASS_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MASS_ENERGY_EQUIVALENT_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MASS_IN_U_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_MOLAR_MASS_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_NEUTRON_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_PROTON_MAG_MOM_RATIO_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_PROTON_MASS_RATIO_2014;
ADD_IMPORT const struct codata_constant_type DEUTERON_RMS_CHARGE_RADIUS_2014;