src/codata_constants_2014_capi.f90


type(capi_constant_type), protected, public, bind(C, name="DEUTERON_ELECTRON_MAG_MOM_RATIO_2014") ::&
capi_61_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "e", &
"l", "e", "c", "t", "r", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_ELECTRON_MAG_MOM_RATIO_2014%value, &
DEUTERON_ELECTRON_MAG_MOM_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_ELECTRON_MASS_RATIO_2014") ::&
capi_62_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "e", &
"l", "e", "c", "t", "r", "o", "n", " ", "m", "a", &
"s", "s", " ", "r", "a", "t", "i", "o", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_ELECTRON_MASS_RATIO_2014%value, &
DEUTERON_ELECTRON_MASS_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_G_FACTOR_2014") ::&
capi_63_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "g", &
" ", "f", "a", "c", "t", "o", "r", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_G_FACTOR_2014%value, &
DEUTERON_G_FACTOR_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MAG_MOM_2014") ::&
capi_64_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MAG_MOM_2014%value, &
DEUTERON_MAG_MOM_2014%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2014") ::&
capi_65_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "t", &
"o", " ", "B", "o", "h", "r", " ", "m", "a", "g", &
"n", "e", "t", "o", "n", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2014%value, &
DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2014") ::&
capi_66_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "t", &
"o", " ", "n", "u", "c", "l", "e", "a", "r", " ", &
"m", "a", "g", "n", "e", "t", "o", "n", " ", "r", &
"a", "t", "i", "o", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2014%value, &
DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_2014") ::&
capi_67_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_2014%value, &
DEUTERON_MASS_2014%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_ENERGY_EQUIVALENT_2014") ::&
capi_68_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "e", "n", "e", "r", "g", "y", &
" ", "e", "q", "u", "i", "v", "a", "l", "e", "n", &
"t", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_ENERGY_EQUIVALENT_2014%value, &
DEUTERON_MASS_ENERGY_EQUIVALENT_2014%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2014") ::&
capi_69_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "e", "n", "e", "r", "g", "y", &
" ", "e", "q", "u", "i", "v", "a", "l", "e", "n", &
"t", " ", "i", "n", " ", "M", "e", "V", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2014%value, &
DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2014%uncertainty, &
[ &
"M", "e", "V", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_IN_U_2014") ::&
capi_70_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "i", "n", " ", "u", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_IN_U_2014%value, &
DEUTERON_MASS_IN_U_2014%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MOLAR_MASS_2014") ::&
capi_71_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"o", "l", "a", "r", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MOLAR_MASS_2014%value, &
DEUTERON_MOLAR_MASS_2014%uncertainty, &
[ &
"k", "g", " ", "m", "o", "l", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_NEUTRON_MAG_MOM_RATIO_2014") ::&
capi_72_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "n", &
"e", "u", "t", "r", "o", "n", " ", "m", "a", "g", &
".", " ", "m", "o", "m", ".", " ", "r", "a", "t", &
"i", "o", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_NEUTRON_MAG_MOM_RATIO_2014%value, &
DEUTERON_NEUTRON_MAG_MOM_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_PROTON_MAG_MOM_RATIO_2014") ::&
capi_73_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "g", ".", &
" ", "m", "o", "m", ".", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_PROTON_MAG_MOM_RATIO_2014%value, &
DEUTERON_PROTON_MAG_MOM_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_PROTON_MASS_RATIO_2014") ::&
capi_74_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_PROTON_MASS_RATIO_2014%value, &
DEUTERON_PROTON_MASS_RATIO_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_RMS_CHARGE_RADIUS_2014") ::&
capi_75_2014 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "r", &
"m", "s", " ", "c", "h", "a", "r", "g", "e", " ", &
"r", "a", "d", "i", "u", "s", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_RMS_CHARGE_RADIUS_2014%value, &
DEUTERON_RMS_CHARGE_RADIUS_2014%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
